[project]
name = "snmp_cache"
version = "0.9.0"
description = "Python Library to perform SNMP queries and cache the data."
authors = [{name = "Thomas Dunteman", email= "git@learningtopi.com"}]
keywords = ["snmp", "cache", "snmpv2", "snmpv3"]
readme = "README.md"
requires-python =">=3.8"
classifiers = [
    "Topic :: System :: Networking :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"]
dependencies = ["gpiod", "bmx280-spi", "dht11-spi", "Jinja2", "lirc",
            "logging-handler", "pyserial", "RPLCD", "smbus2", "spidev"]

[project.urls]
"Homepage" = "https://www.learningtopi.com/python-modules-applications/sbc_gpio/"
"Bug Tracker" = "https://github.com/LearningToPi/sbc_gpio/issues"
"Source Code" = "https://github.com/LearningToPi/sbc_gpio"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
"update_dynamic_overlay.py"="sbc_gpio.scripts:update_dynamic_overlay"
